# sparse-voxel-octrees

./: CMakeLists.txt
models/: XYZRGB-Dragon.oct
src/: Main.cpp
